# medical-deep-research

./: .gitignore  .gitleaks.toml  .gitleaksignore  Dockerfile  LICENSE  Medical Deep Research.spec  README.md  README_MEDICAL.md  README_UPSTREAM.md  README_WEB.md  pyproject.toml  start-web.bat  start-web.sh  upgrade-web.bat  upgrade-web.sh
.board/session-tidies/: 43e5620d-ed7d-4c4a-94e4-fe0fb930416a.md  agent-a8b1228aaa67f0ab1.md  agent-aa5ad142ad2b4ebfe.md  agent-abc5a3d15f64afa96.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: accessibility-compliance-tests.yml  claude-code-review.yml  codeql.yml  critical-ui-tests.yml  dependency-review.yml  desktop-build.yml  docker-publish.yml  docker-tests.yml  extended-ui-tests.yml  fuzz.yml  gitleaks-main.yml  gitleaks.yml  metrics-analytics-tests.yml  news-tests.yml  npm-audit.yml  ossf-scorecard.yml  osv-scanner-scheduled.yml  osv-scanner.yml  performance-tests.yml  python-desktop-build.yml  security-headers-validation.yml  security-tests.yml  update-release-v2.9.0-description.yml
api/: Makefile  main.py  pyproject.toml  requirements.txt
assets/: icon.icns
data/research/eVY6pnMrQGA89FSaQeFzj/: state.md
data/research/fweSc33XRwHODjCwneyeH/: state.md
scripts/: build-desktop.bat  build-desktop.sh  build-macos.sh  build-windows.ps1  desktop_entry.py  eval_anthropic_route.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: init-db.ts
src-tauri/resources/splash/: index.html
src-tauri/src/: lib.rs  main.rs  server.rs
src/local_deep_research/: deep_agent_system.py
src/local_deep_research/advanced_search_system/questions/: __init__.py  medical_question.py
src/local_deep_research/progress/: __init__.py  hierarchical_progress.py
src/local_deep_research/tools/: __init__.py  medical_tools.py
src/local_deep_research/web/routes/: research_routes.py  settings_routes.py
src/local_deep_research/web/services/: research_service.py  socket_service.py
src/local_deep_research/web/templates/: ai_settings.html
src/medical_deep_research/: __init__.py  agentic_tools.py  codex_auth.py  config.py  main.py  model_catalog.py  models.py  pdf_text.py  persistence.py  progress.py  provider_config.py  rag.py  reading_service.py  runtime.py  service.py  tools.py  ui.py  updates.py
src/medical_deep_research/mcp/: __init__.py  servers.py
src/medical_deep_research/qtui/: __init__.py  i18n.py  main_window.py  run_list.py  sidebar.py  theme.py  update_dialog.py
src/medical_deep_research/qtui/tabs/: artifacts_tab.py  diagnostics_tab.py  report_tab.py  studies_tab.py  trace_tab.py
src/medical_deep_research/qtui/widgets/: badge.py  (+1 more)
src/medical_deep_research/research/: __init__.py  audit.py  connectors.py  fulltext.py  http.py  models.py  planning.py  prisma.py  reporting.py  scoring.py  search.py  snowball.py  verification.py
tests/: test_anthropic_route.py  test_citation_metadata.py  test_clinical_trials_search.py  test_codex_paths.py  test_codex_runtime_progress.py  test_codex_schema.py  test_desktop_build_workflow.py  test_desktop_entry.py  test_local_runtime.py  test_mcp_command.py  test_mcp_incremental_search.py  test_model_catalog.py  test_native_loop_stages.py  test_pdf_checkpoint.py  test_planning.py  test_prisma_audit.py  test_progress.py  test_provider_config.py  test_report_synthesis_scope.py  test_research_http.py  test_scopus_search.py  test_scoring.py  test_service_keys.py  test_snowball.py  test_source_catalog.py  test_ui_exports.py  test_updates.py
web/: .env.example  .gitignore  .syncthing.drizzle.config.ts.tmp  drizzle.config.ts  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/data/: medical-research.db-shm  medical-research.db-wal
web/drizzle/: 0000_typical_arachne.sql  0001_messy_dragon_man.sql  0002_lowly_fixer.sql  0003_breezy_nova.sql
web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
web/messages/: en.json  ko.json
web/scripts/: init-db.ts
web/src/: middleware.ts  proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/components/: Navbar.tsx
web/src/db/: index.ts  schema.ts
web/src/i18n/: client.tsx  request.ts
web/src/lib/: auth.ts  db.ts  research.ts  state-export.ts  utils.ts
web/src/types/: index.ts
(+72 files in other folders)
