[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "medical-deep-research"
version = "2.9.1"
description = "Python-first rewrite of the Medical Deep Research desktop application"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Junhewk" },
]
dependencies = [
  "anyio",
  "httpx",
  "mcp[cli]",
  "PySide6>=6.6",
  "qasync>=0.27",
  "pydantic-settings",
  "sqlmodel",
]

[project.optional-dependencies]
openai = ["openai-agents"]
anthropic = ["anthropic", "deepagents", "langchain", "langchain-anthropic", "langgraph"]
claude-sdk = ["claude-agent-sdk"]
pdf = ["markitdown[pdf]", "opendataloader-pdf", "unpywall"]
langchain = ["langchain", "langchain-core", "langchain-community", "langchain-openai", "langgraph"]
google = ["google-adk"]
dev = ["ruff"]

[project.scripts]
medical-deep-research = "medical_deep_research.main:main"
medical-deep-research-mcp = "medical_deep_research.mcp.servers:main"

[tool.hatch.build.targets.wheel]
packages = ["src/medical_deep_research"]

[tool.hatch.build.targets.wheel.force-include]
"src/medical_deep_research/assets/fonts/PretendardVariable.ttf" = "medical_deep_research/assets/fonts/PretendardVariable.ttf"
"src/medical_deep_research/assets/fonts/Pretendard-LICENSE.txt" = "medical_deep_research/assets/fonts/Pretendard-LICENSE.txt"
